--- a/res/values/customx_strings.xml
+++ b/res/values/customx_strings.xml
@@ -232,5 +232,9 @@
 
     <string name="wifi_tether_client_list_title">Client List</string>
     <string name="wifi_tether_client_list_summary">Manage clients connected to hotspot</string>
+
+   <!-- Cloudflare DNS -->
+    <string name="private_dns_mode_cloudflare" translatable="false">Cloudflare DNS</string>
+
 </resources>
 
