--- a/res/values/custom_arrays.xml
+++ b/res/values/custom_arrays.xml
@@ -88,4 +88,42 @@
         <item>5</item>
         <item>6</item>
     </string-array>
+
+   <!-- Back swipe actions -->
+    <string-array name="swipe_actions_entries" translatable="false">
+        <item>@string/action_nothing</item>
+        <item>@string/action_voice_search</item>
+        <item>@string/action_launch_camera</item>
+        <item>@string/action_app_action</item>
+        <item>@string/kill_app</item>
+        <item>@string/recent_app_toggle</item>
+    </string-array>
+
+    <string-array name="swipe_actions_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+
+    <string-array name="long_back_swipe_timeout_entries">
+       <item>250 ms</item>
+       <item>300 ms</item>
+       <item>500 ms</item>
+       <item>1000 ms</item>
+       <item>1500 ms</item>
+       <item>2000 ms</item>
+    </string-array>
+
+    <string-array name="long_back_swipe_timeout_values" translatable="false">
+       <item>250</item>
+       <item>300</item>
+       <item>500</item>
+       <item>1000</item>
+       <item>1500</item>
+       <item>2000</item>
+    </string-array>
+
 </resources>
