Settings: Expose radio info (*#*#4636#*#*)
idoybh edits: Move to about phone in settings

Signed-off-by: Omkar Chandorkar <gotenksIN@aosip.dev>
Change-Id: I65865e7edd0e5e8799f310710a533ac80587c715
Signed-off-by: blinoff82 <blinov.in@gmail.com>

--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -61,6 +61,15 @@
         settings:enableCopying="true"/>
 
     <Preference
+            android:title="@string/radio_info_title"
+            android:key="radio_info_settings"
+            android:order="15">
+        <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.phone"
+                android:targetClass="com.android.phone.settings.RadioInfo" />
+    </Preference>
+
+    <Preference
         android:key="emergency_info"
         android:order="14"
         android:title="@string/emergency_info_title"
