--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -125,4 +125,7 @@
     <string name="fp_wake_unlock_title">Fingerprint behaviour</string>
     <string name="fp_wake_unlock_touch">Touch</string>
     <string name="fp_wake_unlock_press">Press</string>
+
+     <!-- Radio Info -->
+    <string name="radio_info_title">Radio info</string>
 </resources>
