--- a/res/xml/screen_lock_settings.xml
+++ b/res/xml/screen_lock_settings.xml
@@ -62,4 +62,13 @@
         android:title="@string/unlock_quick_unlock_control_title"
         android:summary="@string/unlock_quick_unlock_control_summary" />
 
+    <!-- Fp wake unlock -->
+    <ListPreference
+        android:key="fp_wake_unlock"
+        android:title="@string/fp_wake_unlock_title"
+        android:summary="%s"
+        android:entries="@array/fp_wake_unlock_preference_titles"
+        android:entryValues="@array/fp_wake_unlock_preference_titles"
+        settings:controller="com.android.settings.security.screenlock.FpWakeUnlockSelectorController"/>
+
 </PreferenceScreen>
