Settings: Double tap to trigger doze [2/2]
* Also adapt Add video to Double tap to trigger doze from Pie: a66601a

Change-Id: Id98543542db937c6cc1f176cd55f6b02e472849d

a

--- a/res/values/customx_strings.xml
+++ b/res/values/customx_strings.xml
@@ -224,5 +224,10 @@
     <string name="switch_retro">Retro</string>
     <string name="switch_oos">OxygenOS 11</string>
      <string name="android_s">Android 12</string>
+
+    <!-- Doze on double tap -->
+    <string name="double_tap_title">Double tap</string>
+    <string name="doze_double_tap_title">Double tap to check phone</string>
+    <string name="doze_double_tap_summary">Pulse notifications by a double tap</string>
 </resources>
 
