--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -99,6 +99,13 @@
         android:fragment="com.android.settings.gestures.AdaptivePlaybackGestureSettings"
         settings:controller="com.android.settings.gestures.AdaptivePlaybackParentPreferenceController" />
 
+    <Preference
+            android:key="double_tap"
+            android:fragment="com.android.settings.gestures.DoubleTapAmbientSettings"
+            android:title="@string/doze_double_tap_title"
+            android:summary="@string/doze_double_tap_summary"
+            settings:userRestriction="no_ambient_display" />
+
     <com.android.settings.custom.preference.RemotePreference
             android:key="touchscreen_gesture_settings"
             android:title="@string/touchscreen_gesture_settings_title"
